src/objects/MDO_BrandManufacturers__c.object
<CustomObject>
    <description>junction object for brand and manufacturer objects</description>
    <fields>
        <fullName>brand_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to brand</description>
        <label>Brand Id</label>
        <referenceTo>MDO_Brand__c</referenceTo>
        <relationshipLabel>BrandManufacturers</relationshipLabel>
        <relationshipName>BrandManufacturers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>brand_mdm_id__c</fullName>
        <externalId>true</externalId>
        <label>Brand MDM Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>manufacturer_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to Manufacturer</description>
        <label>Manufacturer Id</label>
        <referenceTo>MDO_Manufacturer__c</referenceTo>
        <relationshipLabel>BrandManufacturers</relationshipLabel>
        <relationshipName>BrandManufacturers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>manufacturer_mdm_id__c</fullName>
        <externalId>true</externalId>
        <label>Manufacturer MDM Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mdm_id__c</fullName>
        <description>store mdm id&apos;s</description>
        <externalId>true</externalId>
        <label>MDM ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>BrandManufacturers</label>
    <nameField>
        <displayFormat>PCB-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BrandManufacturers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>